fixed overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 :root {
@@ -31,10 +32,6 @@ body {
     background-color: var(--Pale-blue);
 }
 
-.container {
-    overflow: hidden;
-}
-
 .hero-img svg{
     border-radius: 2em 2em 0 0;
 }
@@ -44,7 +41,6 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
-    overflow: hidden;
 }
 
 .card {
